# new_RoT_by_FROST

./: Cargo.toml  README.md  README_ORIGINAL.md
crates/frost-core/: Cargo.toml
crates/frost-core/src/: derived_key.rs  dkg.rs  hybrid.rs  lib.rs  rotation.rs  session_token.rs  signing.rs  transcript.rs  types.rs
crates/hardware-hal/: Cargo.toml
crates/hardware-hal/src/: feitian.rs  gigadevice.rs  lib.rs  memory.rs  nations.rs  traits.rs
docs/: ARCHITECTURE_COMPARISON.md  SECURITY_MODEL.md  SECURITY_PROOF.md
docs/integration/: MACOS_INTEGRATION.md
docs/manufacturing/: ASSEMBLY_GUIDE.md  BOM.md  PCB_SPECIFICATIONS.md
