[package]
name = "frost-core"
version = "0.1.0"
edition = "2021"
description = "Core FROST threshold signature implementation"

[dependencies]
curve25519-dalek = { version = "4.1", features = ["serde"] }
sha2 = "0.10"
sha3 = "0.10"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
hex = "0.4"
rand = "0.8"
