[package]
name = "frost-hardware-hal"
version = "0.1.0"
edition = "2021"
description = "Hardware abstraction layer for FROST RoT on Chinese secure elements"

[dependencies]
frost-core = { path = "../frost-core" }

# Crypto
curve25519-dalek = "4.1"
sha2 = "0.10"
zeroize = "1.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Error handling
thiserror = "1.0"

# Embedded support
embedded-hal = { version = "1.0", optional = true }
embedded-hal-bus = { version = "0.2", optional = true }

# Async
async-trait = { version = "0.1", optional = true }

# Logging
log = "0.4"

[features]
default = ["std"]
std = ["async-trait"]
no_std = ["embedded-hal", "embedded-hal-bus"]

# Hardware-specific features
gigadevice-gd32 = []      # GigaDevice GD32 ARM Cortex-M with TrustZone
nations-tech-se = []       # Nations Technologies secure element
feitian-hsm = []          # Feitian HSM
allwinner-riscv = []      # Allwinner RISC-V with security extensions
